--- a/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionDocentes/mantenimientoDocentes/index.xhtml
@@ -16,57 +16,58 @@
     <ui:define name="content">
         <div class="EmptyBox5"></div>
         <p:panel>
-                <h:form enctype="multipart/form-data" id="consultaForm" >
-                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-                        <p:outputLabel value="Esta ayuda sirve un monton"/>
-                    </p:dialog>
-                    <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
-                        <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
-                        <div class="EmptyBox20"></div>
-                        <p:commandButton value="Si" action="#{gestionarDocentesController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
-                        <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
-                    </p:dialog>
-                    
-                    <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
-                    <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionarDocentesController.docentesList}" 
-                                 paginator="true" rows="5"
-                                 paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="10,20,40"
-                                 reflow="true">
-                        <p:column headerText="Nombre" style="width: 20%" filterBy="#{car.nombreCompleto}" filterMatchMode="contains" filterable="true">
-                            #{car.nombreCompleto}
-                        </p:column>
-                        <p:column headerText="Fecha Nac." style="width: 8%"  filterBy="#{car.fechaNacimientoFiltrable}" filterMatchMode="contains" filterable="true">
-                            #{car.fechaNacimientoFiltrable}
-                        </p:column>
-                        <p:column headerText="Correo" style="width: 20%" filterBy="#{car.dcCorreo}" filterMatchMode="contains" filterable="true">
-                            #{car.dcCorreo}
-                        </p:column>
-                        <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm1}" filterMatchMode="contains" filterable="true">
-                            #{formatUtils.getFormatedPhone(car.dcTelefonoEm1)}
-                        </p:column>
-                        <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm2}" filterMatchMode="contains" filterable="true">
-                            #{formatUtils.getFormatedPhone(car.dcTelefonoEm2)}
-                        </p:column>
-                        <p:column headerText="Dirección" filterBy="#{car.dcDireccion}" filterMatchMode="contains" filterable="true">
-                            #{car.dcDireccion}
-                        </p:column>
-                        <p:column headerText="Acciones">
-                       
-                        <p:commandLink action="#{gestionarDocentesController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
-                            <p:commandLink action="#{gestionarDocentesController.modificar(car)}" ><i class="icon-compose Fs25 Red" title="Modificar Expediente" ></i></p:commandLink>
-                            <p:commandLink action="#{gestionarDocentesController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
-                                <i class="icon-close Fs25 Red" title="Eliminar Expediente"></i>
-                            </p:commandLink>
-                        </p:column>
-                    </p:dataTable>
+            <h:form enctype="multipart/form-data" id="consultaForm" >
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton"/>
+                </p:dialog>
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                  
-                    <p:commandButton value="Registrar Docente" action="#{gestionarDocentesController.setIndexMenu(1)}" ></p:commandButton>
-                    <p:commandButton value="Refrescar" action="#{gestionarDocentesController.refresh()}" update="consulta"></p:commandButton>
-                </h:form>
-            </p:panel>
-            
-       
+                    <p:commandButton value="Si" action="#{gestionarDocentesController.eliminarExpediente()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
+                </p:dialog>
+
+                <p:remoteCommand name="updateTablaConsulta" update="consulta"></p:remoteCommand>
+                <p:dataTable id="consulta" paginatorPosition="bottom" var="car" value="#{gestionarDocentesController.docentesList}" 
+                             paginator="true" rows="5"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="10,20,40"
+                             reflow="true">
+                    <p:column headerText="Nombre" style="width: 20%" filterBy="#{car.nombreCompleto}" filterMatchMode="contains" filterable="true">
+                        #{car.nombreCompleto}
+                    </p:column>
+                    <p:column headerText="Fecha Nac." style="width: 8%"  filterBy="#{car.fechaNacimientoFiltrable}" filterMatchMode="contains" filterable="true">
+                        #{car.fechaNacimientoFiltrable}
+                    </p:column>
+                    <p:column headerText="Correo" style="width: 20%" filterBy="#{car.dcCorreo}" filterMatchMode="contains" filterable="true">
+                        #{car.dcCorreo}
+                    </p:column>
+                    <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm1}" filterMatchMode="contains" filterable="true">
+                        #{formatUtils.getFormatedPhone(car.dcTelefonoEm1)}
+                    </p:column>
+                    <p:column headerText="Teléfono" style="width: 8%" filterBy="#{car.dcTelefonoEm2}" filterMatchMode="contains" filterable="true">
+                        #{formatUtils.getFormatedPhone(car.dcTelefonoEm2)}
+                    </p:column>
+                    <p:column headerText="Dirección" filterBy="#{car.dcDireccion}" filterMatchMode="contains" filterable="true">
+                        #{car.dcDireccion}
+                    </p:column>
+                    <p:column headerText="Acciones">
+
+                        <p:commandLink action="#{gestionarDocentesController.ver(car)}"><i class="icon-visibility1 Fs25 Red" title="Ver Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarDocentesController.modificar(car)}" ><i class="icon-compose Fs25 Red" title="Modificar Expediente" ></i></p:commandLink>
+                        <p:commandLink action="#{gestionarDocentesController.eliminar(car)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                            <i class="icon-close Fs25 Red" title="Eliminar Expediente"></i>
+                        </p:commandLink>
+                        <p:commandLink action="#{gestionarDocentesController.gestionarMateriasDocente(car)}" ><i class="icon-portfolio Fs25 Red" title="Gestionar materias asignadas" ></i></p:commandLink>
+                    </p:column>
+                </p:dataTable>
+                <div class="EmptyBox20"></div>
+
+                <p:commandButton value="Registrar Docente" action="#{gestionarDocentesController.setIndexMenu(1)}" ></p:commandButton>
+                <p:commandButton value="Refrescar" action="#{gestionarDocentesController.refresh()}" update="consulta"></p:commandButton>
+            </h:form>
+        </p:panel>
+
+
     </ui:define>
 </ui:composition>
